--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "diego-brocanelli/money_to_word",
     "description": "Convert money into text",
     "license": "BSD 3-clause",
-    "version":"1.0",
+    "version":"1.0.0",
     "minimum-stability": "dev",
     "authors": [
         {
@@ -11,11 +11,19 @@
         }
     ],
     "require": {
-        "php": ">=5.3.8"
+        "php": ">=7.4"
     },
     "autoload": {
         "psr-4":{
             "Money\\Convert\\":"src/Money/"
         }
+    },
+    "scripts":{
+        "tests":["vendor/bin/phpunit --testdox --color tests"],
+        "analyse":["vendor/bin/phpstan analyse src tests --level=4"]
+    },
+    "require-dev": {
+        "phpunit/phpunit": "10.0.x-dev",
+        "phpstan/phpstan": "0.12.x-dev"
     }
 }
