Realizado refactoring na arquitetura, simplificando e reorganizando os componentes da aplicação.
Foi melhor segmentado as responsábilidades das classes e reestrutura seu código para syntaxe do php 7.4.

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "autoload": {
         "psr-4":{
-            "Money\\Convert\\":"src/Money/"
+            "Money\\":"src/"
         }
     },
     "scripts":{
